@@ -172,7 +172,7 @@ Connection_Handler::open (void*)
 
       this->peer ().get_remote_addr (from);
       const int bufsiz = 128;
-      char buf[bufsiz];
+      ACE_TCHAR buf[bufsiz];
 
       from.addr_to_string (buf, bufsiz, 0);
 
@@ -254,7 +254,7 @@ int run_main (int argc, ACE_TCHAR *argv[])
   acceptor.acceptor ().get_local_addr (address);
 
   const int bufsiz = 128;
-  char buf[bufsiz];
+  ACE_TCHAR buf[bufsiz];
 
   address.addr_to_string (buf, bufsiz, 0);
 
