@@ -1,3 +1,11 @@
+Tue Jan 22 12:28:19 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/CDR_Size.h:
+          Doxygen changs
+
+        * tests/FlReactor_Test.cpp:
+          Unicode fixes
+
 Mon Jan 21 08:24:11 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * html/Stats/index.shtml:
